--- a/src/vboa/templates/eboa_nav/query_annotation_cnfs.html
+++ b/src/vboa/templates/eboa_nav/query_annotation_cnfs.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_annotation_cnfs %}class="active"{% endblock %}
 {% block div_active_annotation_cnfs %}active{% endblock %}
 {% block annotation_cnfs_nav_content %}
