--- a/src/vboa/templates/eboa_nav/query_annotations.html
+++ b/src/vboa/templates/eboa_nav/query_annotations.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_annotations %}class="active"{% endblock %}
 {% block div_active_annotations %}active{% endblock %}
 {% block annotations_nav_content %}
