--- a/src/vboa/templates/eboa_nav/query_dim_signatures.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_dim_signatures %}class="active"{% endblock %}
 {% block div_active_dim_signatures %}active{% endblock %}
 {% block dim_signatures_nav_content %}
