--- a/src/vboa/templates/eboa_nav/query_events.html
+++ b/src/vboa/templates/eboa_nav/query_events.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_events %}class="active"{% endblock %}
 {% block div_active_events %}active{% endblock %}
 {% block events_nav_content %}
