--- a/src/vboa/templates/eboa_nav/query_explicit_references.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_explicit_references %}class="active"{% endblock %}
 {% block div_active_explicit_references %}active{% endblock %}
 {% block explicit_references_nav_content %}
