--- a/src/vboa/templates/eboa_nav/query_gauges.html
+++ b/src/vboa/templates/eboa_nav/query_gauges.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_gauges %}class="active"{% endblock %}
 {% block div_active_gauges %}active{% endblock %}
 {% block gauges_nav_content %}
