--- a/src/vboa/templates/eboa_nav/query_sources.html
+++ b/src/vboa/templates/eboa_nav/query_sources.html
@@ -1,4 +1,4 @@
-{% extends "eboa_nav/eboa_nav.html" %}
+{% extends "eboa_nav/eboa_query.html" %}
 {% block li_active_sources %}class="active"{% endblock %}
 {% block div_active_sources %}active{% endblock %}
 {% block sources_nav_content %}
