--- a/src/vboa/templates/rboa_nav/query_reports.html
+++ b/src/vboa/templates/rboa_nav/query_reports.html
@@ -1,4 +1,4 @@
-{% extends "rboa_nav/rboa_nav.html" %}
+{% extends "rboa_nav/rboa_query.html" %}
 {% block li_active_reports %}class="active"{% endblock %}
 {% block div_active_reports %}active{% endblock %}
 {% block reports_nav_content %}
