--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -42,7 +42,11 @@
               <div class="col-xs-3">
                 <label>Report group</label>
                 <div class="input-group" style="width: 100%">
+                  {% if "report_group" in filters %}
+                  <input class="form-control" style="width: 80%" name="report_group" id="reports-report-group-text"/ value="{{ filters['report_group'] }}">
+                  {% else %}
                   <input class="form-control" style="width: 80%" name="report_group" id="reports-report-group-text"/>
+                  {% endif %}
                   <select class="form-control" style="padding-left: 0; width: 20%" name="report_group_operator" id="reports-report-group-operator">
                     {% include "eboa_nav/operators.html" %}
                   </select>
