--- a/src/vboa/templates/panel/error.html
+++ b/src/vboa/templates/panel/error.html
@@ -7,6 +7,7 @@
   <!-- /.col-lg-12 -->  
 </div>
 <div>
-  <i style="font-size: 400px" class="fa fa-frown-o fa-6"></i>
+  <img style="display:inline" src="{{ url_for('static', filename='images/boa_favicon.png') }}"/>
+  <i style="display:inline; font-size: 400px" class="fa fa-frown-o fa-6"></i>
 </div>
 {% endblock %}
