Improve process management from vboa of cron to indicate only root can manage it
Add Scheduler view from vboa

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -80,7 +80,22 @@
                     <a href="#" onclick="vboa.request_switch_on_off_orc()"><i id="orc-indicator" class="circle red-circle"></i><span> Orchestrator</a>
                   </li>
                   <li>
-                    <a href="#" onclick="vboa.request_switch_on_off_cron()"><i id="cron-indicator" class="circle red-circle"></i><span> CRON</a>
+                    <a href="#" onclick="vboa.request_switch_on_off_cron()"><i id="cron-indicator" class="circle red-circle"></i><span> Health</a>
+                  </li>
+                  <li>
+                    <a href="#" onclick="vboa.request_switch_on_off_scheduler()"><i id="sboa-indicator" class="circle red-circle"></i><span> Scheduler</a>
+                  </li>
+                </ul>
+                <!-- /.nav-second-level -->
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-clock-o fa-fw"></i> BOA Scheduler<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="/sboa/simulate"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
+                  </li>
+                  <li>
+                    <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
