--- a/src/vboa/templates/rboa_nav/execute_reports.html
+++ b/src/vboa/templates/rboa_nav/execute_reports.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div align="center">
-      <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button">Query</button>
+      <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button">Execute</button>
     </div>
   </form>
 </div>
