Add BOA scheduler controls

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -94,9 +94,9 @@
                   <li>
                     <a href="/sboa/simulate"><i class="fa fa-fw fa-calculator"></i> Simulate</a>
                   </li>
-                  <li>
-                    <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a>
-                  </li>
+                  <!-- <li> -->
+                  <!--   <a href="/sboa/navigate"><i class="fa fa-table fa-fw"></i> Navigate</a> -->
+                  <!-- </li> -->
                 </ul>
                 <!-- /.nav-second-level -->
               </li>
