--- a/src/vboa/templates/rboa_nav/reports_nav.html
+++ b/src/vboa/templates/rboa_nav/reports_nav.html
@@ -10,9 +10,12 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
-<div class="panel panel-green">
+{% set not_generated_reports = reports|selectattr("generation_error", "==", True)|list %}
+{% set successfully_generated_reports = reports|rejectattr("generation_error", "==", True)|list %}
+{% if not_generated_reports|length > 0 %}
+<div class="panel panel-red">
   <div class="panel-heading">
-    Table of reports
+    Table of not generated reports
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
@@ -32,10 +35,11 @@
           <th>Generator</th>
           <th>Version</th>
           <th>UUID</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
-        {% for report in reports %}
+        {% for report in not_generated_reports %}
         <tr>
           <td><i id="expand-report-statuses-{{ report.report_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_report_statuses('expand-report-statuses-{{ report.report_uuid }}', '{{ report.report_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
           <td><a href="/rboa_nav/query-report/{{ report.report_uuid }}">{{ report.name }}</a></td>
@@ -58,6 +62,11 @@
           <td>{{ report.generator }}</td>
           <td>{{ report.generator_version }}</td>
           <td>{{ report.report_uuid }}</td>
+          <td>
+            {% with report = report %}
+            {% include "rboa_nav/actions.html" %}
+            {% endwith %}
+          </td>
         </tr>
         {% endfor %}
       </tbody>
@@ -76,6 +85,89 @@
           <th>Generator</th>
           <th>Version</th>
           <th>UUID</th>
+          <th>Actions</th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+
+<div class="panel panel-green">
+  <div class="panel-heading">
+    Table of reports
+  </div>
+  <!-- /.panel-heading -->
+  <div class="panel-body">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="reports-tables">
+      <thead>
+        <tr>
+          <th></th>          
+          <th>Name</th>
+          <th>Generation mode</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Validity Duration (m)</th>
+          <th>Generation start</th>
+          <th>Generation stop</th>
+          <th>Generation Duration (m)</th>
+          <th>Report group</th>
+          <th>Generator</th>
+          <th>Version</th>
+          <th>UUID</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for report in successfully_generated_reports %}
+        <tr>
+          <td><i id="expand-report-statuses-{{ report.report_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_report_statuses('expand-report-statuses-{{ report.report_uuid }}', '{{ report.report_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
+          <td><a href="/rboa_nav/query-report/{{ report.report_uuid }}">{{ report.name }}</a></td>
+          <td>{{ report.generation_mode }}</td>
+          <td>{{ report.validity_start }}</td>
+          <td>{{ report.validity_stop }}</td>
+          {% if report.validity_stop and report.validity_start %}
+          <td>{{ ((report.validity_stop - report.validity_start).total_seconds() / 60)|round(3) }}</td>
+          {% else %}
+          <td></td>
+          {% endif %}
+          <td>{{ report.generation_start }}</td>
+          <td>{{ report.generation_stop }}</td>
+          {% if report.generation_stop and report.generation_start %}
+          <td>{{ ((report.generation_stop - report.generation_start).total_seconds() / 60)|round(3) }}</td>
+          {% else %}
+          <td></td>
+          {% endif %}
+          <td>{{ report.reportGroup.name }}</td>
+          <td>{{ report.generator }}</td>
+          <td>{{ report.generator_version }}</td>
+          <td>{{ report.report_uuid }}</td>
+          <td>
+            {% with report = report %}
+            {% include "rboa_nav/actions.html" %}
+            {% endwith %}
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+      <tfoot>
+        <tr>
+          <th></th>          
+          <th>Name</th>
+          <th>Generation mode</th>
+          <th>Validity start</th>
+          <th>Validity stop</th>
+          <th>Validity Duration (s)</th>
+          <th>Generation start</th>
+          <th>Generation stop</th>
+          <th>Generation Duration (s)</th>
+          <th>Report group</th>
+          <th>Generator</th>
+          <th>Version</th>
+          <th>UUID</th>
+          <th>Actions</th>
         </tr>
       </tfoot>
     </table>
