--- a/src/vboa/templates/reporting_control/reporting_control_errors_content.html
+++ b/src/vboa/templates/reporting_control/reporting_control_errors_content.html
@@ -31,6 +31,7 @@
             <th>Generator</th>
             <th>Version</th>
             <th>UUID</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -71,6 +72,11 @@
             <td>{{ report.generator }}</td>
             <td>{{ report.generator_version }}</td>
             <td>{{ report.report_uuid }}</td>
+            <td>
+              {% with report = report %}
+              {% include "rboa_nav/actions.html" %}
+              {% endwith %}
+            </td>
           </tr>
           {% endfor %}
         </tbody>
@@ -93,6 +99,7 @@
             <th>Generator</th>
             <th>Version</th>
             <th>UUID</th>
+            <th>Actions</th>
           </tr>
         </tfoot>
       </table>
