Port code to new vis versions

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -20,7 +20,7 @@
 
   </head>
 
-  <body>
+  <body id="boa-body">
     <div id="boa-html-page" hidden>
     </div>    
     <div id="updating-page">
