Add interface for querying sources by source name
Change link to show source details to show all the sources related to the same source name

--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
@@ -39,7 +39,7 @@
             <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
             <td>{{ alert.alertDefinition.group.name }}</td>
             <td>{{ alert.alertDefinition.name }}</td>
-            <td><a href="/eboa_nav/query-source/{{ alert.source_uuid }}">{{ alert.source.name }}</a></td>
+            <td><a href="/eboa_nav/query-sources-by-name/{{ source.name }}">{{ source.name }}</a></td>
             <td>{{ alert.message }}</td>
             <td>{{ alert.validated }}</td>
             <td>{{ alert.generator }}</td>
