--- a/src/vboa/templates/ingestion_control/ingestion_control.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control.html
@@ -63,7 +63,7 @@
           {% for source in sources_to_be_shown %}
           <tr>
             <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/query-source/{{ source.source_uuid }}">{{ source.name }}</a></td>
+            <td><a href="/eboa_nav/query-sources-by-name/{{ source.name }}">{{ source.name }}</a></td>
             <td>{{ source.dimSignature.dim_signature }}</td>
             {% with progress = source.get_ingestion_progress(), error = False %}
             {% include "vboa/progress_bar.html" %}
