Add reporting templates for errors and alerts

--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
@@ -1,7 +1,7 @@
 {% extends "panel/index.html" %}
 {% block content %}
 <div class="row">
-  <h1 class="page-header">Ingestion alerts</h1>
+  <h1 class="page-header">Ingestion alerts and errors</h1>
 </div>
 <!-- /.row -->
 {% with template = "?template=alerts_and_errors" %}
