--- a/src/vboa/templates/reporting_control/reporting_control_errors.html
+++ b/src/vboa/templates/reporting_control/reporting_control_errors.html
@@ -14,6 +14,10 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
+{% with show = {"errors": True} %}
+{% include "reporting_control/reporting_control_summary_content.html" %}
+{% endwith %}
+
 {% include "reporting_control/reporting_control_errors_content.html" %}
 {% endblock %}
 {% block scripts %}
