Correct the sliding method for the template alerts_and_errors

--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_and_errors.html
@@ -30,7 +30,7 @@
   var parameters = {
   "window_delay": "{{ sliding_window['window_delay'] }}",
   "window_size": "{{ sliding_window['window_size'] }}",
-  "template": "alerts",
+  "template": "alerts_and_errors",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
   vboa.update_view(parameters, repeat_cycle, "/ingestion_control/sliding_ingestion_control_parameters");
