--- a/src/vboa/templates/eboa_nav/linked_events_nav.html
+++ b/src/vboa/templates/eboa_nav/linked_events_nav.html
@@ -50,9 +50,9 @@
           </td>
           <td>{{ event.gauge.name }}</td>
           <td>{{ event.gauge.system }}</td>
-          <td>{{ event.start }}</td>
-          <td>{{ event.stop }}</td>
-          <td>{{ event.ingestion_time }}</td>
+          <td>{{ event.start.isoformat() }}</td>
+          <td>{{ event.stop.isoformat() }}</td>
+          <td>{{ event.ingestion_time.isoformat() }}</td>
           {% set source_uuid = event.source.source_uuid %}
           <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ event.source.name }}</a></td>
           <td>
