--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Visualization tool for Bussiness Operation Analysis">
     <meta name="author" content="Daniel Brosnan Blázquez <daniel.brosnan@deimos-space.com>">
     
-    <title>VBOA - Visualization tool for Bussiness Operation Analysis</title>
+    <title>BOA - Bussiness Operation Analysis</title>
 
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/boa_favicon_16x18.png') }}"/>
     
@@ -39,7 +39,7 @@
           </button>
           <div  class="navbar-brand">
             <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_40x45.png') }}"/></a></div>
-            <div style="display:inline"><a href="/">VBOA 0.1.0</a></div>
+            <div style="display:inline"><a href="/">BOA 1.0.0</a></div>
           </div>
         </div>
         <div id="time-clock">
