--- a/src/vboa/templates/boa_health/boa_health_alerts_content.html
+++ b/src/vboa/templates/boa_health/boa_health_alerts_content.html
@@ -3,7 +3,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#associated-boa-health-alerts" style="color:red">Associated alerts <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#associated-boa-health-alerts" style="color:red">BOA health monitoring alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
